docs/v1.0.12/CHANGELOGS/Mappls-Map.md
## v8.2.9, 05 May 2025
- Added Ev Routing Api.
- Added Method to clear Map Cache 

## v8.2.8, 08 April 2025
- Implemented GPS priority in location settings to ensure location is obtained exclusively from GPS, disregarding network-based providers.
- Updated to latest DIGIPIN logic.

## v8.2.7, 03 February 2025
- Added `routeId` in Route Report Response
- Added `radioType` in Geolocation Api Request
- Added `accuracy` in Geolocation Api Response
- Added `filter` in Poi Along the Route Api Request
- Added `hourOfOperation`, `longDescription`, `shortDescription`, `richInfo` and `partnersFlag` in Poi Along the Route Api Response
- Revamped Smart Trip Planning Api
- Added `DigipinUtility` for getting DIGIPIN from Coordinates and vice versa
- Added Entry Coordinates in Reverse Geocode Response
- Added Internal Retry
- Bug Fixes and Security Enhancement

## v8.2.6, 14 November 2024
- Bug Fixes & Improvements

## v8.2.5, 10 October 2024
- Added EV Smart Trip Api

## v8.2.4, 09 September 2024
- Added 100 Coordinates Support in Distance Matrix Api

## v8.2.3, 24 July 2024
- Added Negative Latitude & Longitude Support in Autosuggest, Text Search and Nearby
- Bug Fixes & Improvements

## v8.2.2, 04 May 2024
- Added Census and LGD codes in `Geocode` and `Reverse Geocode`

## v8.2.1, 02 April 2024
- Bug Fixes & Improvements

## v8.2.0, 14 February 2024
- Added ApiResponse for Background api calls to get the Response code of failure
- Bug Fixes & Improvements

## v8.1.3, 04 February 2024
- Bug Fixes & Improvements

## v8.1.2, 28 December 2023
- Bug Fixes & Improvements

## v8.1.1, 21 November 2023
- Added `PageInfo` in POI Along Route Response.
- Bug Fixes & Improvements

## v8.1.0, 30 October 2023
- Security Improvements. 

## v8.0.9, 30 June, 2023
- Added `getCoordinates()` in DirectionRoute.
- Bug Fixes & Improvements

## v8.0.8, 02 June, 2023
- Added Location play service v21.0.1 Support.
- Bug Fixes & Improvements

## v8.0.7, 02 May, 2023
- Added Predictive Routing APIs
- Bug Fixes & Improvements

## v8.0.6, 03 April, 2023
- Added Geolocation API
- Added `routeIndex` request parameter in Trip Cost Estimation API.
- Added `lang` request parameter  in Reverse Geocode API.
- Bug Fixes & Improvements

## v8.0.5, 06 February, 2023
- Added Error Codes while initialising the map
- Added Reset Compass Engine
- Bug Fixes & Improvements

## v8.0.4, 18 October, 2022
- Added PlaceClickListener on map which provides `mapplsPin`
- Bug Fixes & Improvements

## v8.0.3, 26 September, 2022
- Added Weather API

## v8.0.2, 28 August, 2022
- Added Android auto support

## v8.0.1, 19 August, 2022
- Added `mapplsPin` in Reverse Geocode
- Bug Fixes

## v8.0.0, 14 June, 2022
- Initial Mappls Release